# FateInjector

./: CMakeLists.txt  Fate Client Dll Injector.sln  FateInjectorV2.sln  README.md
Fate Client Dll Injector/: Fate Client Dll Injector.cpp  Fate Client Dll Injector.rc  Fate Client Dll Injector.vcxproj  Fate Client Dll Injector.vcxproj.filters  FixFilePerms.cpp  framework.h  inject.cpp  inject.h  resource.h  targetver.h
Fate Client Dll Injector/nlohmann/: json.hpp
FateInjectorV2/: FateInjectorV2.rc  FateInjectorV2.vcxproj  FateInjectorV2.vcxproj.filters  FixFilePerms.cpp  cApp.h  cMain.cpp  cMain.h  config.cpp  config.h  config.txt  inject.cpp  inject.h  pch.h  resource.h  taskBarIcon.cpp  taskBarIcon.h
FateInjectorV2/icon/: icon.xpm
src/: CMakeLists.txt  FixFilePerms.cpp  FixFilePerms.h  cApp.cpp  cApp.h  cMain.cpp  cMain.h  config.cpp  config.h  icon.rc  inject.cpp  pch.h  taskBarIcon.cpp  taskBarIcon.h
wxWidgets-3.2.0/locale/: zh_CN.mo  zh_TW.mo
